--- a/amplify.yml
+++ b/amplify.yml
@@ -7,11 +7,9 @@ frontend:
         - nvm use 22.12.0
         - node -v
         - npm ci
-        # debug (optional): show where the file is
-        - echo "PWD:" && pwd && ls -la
-        # copy outputs into src for Vite to import
-        - test -f amplify_outputs.json && cp amplify_outputs.json src/amplify_outputs.json || true
-        - ls -la src
+        # Generate amplify_outputs.json for THIS app + branch directly into src/
+        - npx ampx generate outputs --branch "$AWS_BRANCH" --app-id "$AWS_APP_ID" --out-dir ./src
+        - echo "Contents of src after outputs generation:" && ls -la src
     build:
       commands:
         - npm run build
