--- a/amplify.yml
+++ b/amplify.yml
@@ -8,6 +8,7 @@ frontend:
         - node -v
         - npm ci
         # Generate amplify_outputs.json for THIS app + branch directly into src/
+        - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
         - npx ampx generate outputs --branch "$AWS_BRANCH" --app-id "$AWS_APP_ID" --out-dir ./src
         - echo "Contents of src after outputs generation:" && ls -la src
     build:
