--- a/amplify.yml
+++ b/amplify.yml
@@ -6,11 +6,19 @@ frontend:
         - nvm install 22.12.0
         - nvm use 22.12.0
         - node -v
-        - npm ci
+
+        - npm config set fetch-retries 5
+        - npm config set fetch-retry-mintimeout 20000
+        - npm config set fetch-retry-maxtimeout 120000
+        - npm config set registry https://registry.npmjs.org/
+
+        - npm ci --no-audit --progress=false
+
         # Generate amplify_outputs.json for THIS app + branch directly into src/
         - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
         - npx ampx generate outputs --branch "$AWS_BRANCH" --app-id "$AWS_APP_ID" --out-dir ./src
         - echo "Contents of src after outputs generation:" && ls -la src
+
     build:
       commands:
         - npm run build
