--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.12.0",
+    "@aws-sdk/client-marketplace-metering": "3.916.0",
     "aws-amplify": "^6.15.5",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "@aws-sdk/client-marketplace-metering": "^3.645.0"
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.16.1",
