build(deps): add @aws-sdk/client-marketplace-metering to call ResolveCustomer 4

--- a/amplify/tsconfig.json
+++ b/amplify/tsconfig.json
@@ -1,5 +1,7 @@
 {
+  "extends": "@aws-amplify/backend/tsconfig.base.json",
   "compilerOptions": {
+    "types": ["node"],
     "target": "es2022",
     "module": "es2022",
     "moduleResolution": "bundler",
